configure markdown parser to wrap tables in order to prevent overflow on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -398,3 +398,8 @@ img {
 #results > div:first-of-type {
     margin-top: 0 !important;
 }
+
+/*tables*/
+.table-overflow-wrapper {
+    overflow-x: auto;
+}
